force-app/main/default/objects/Session_Booth__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <label>Points</label>
    <description>Field to calculate points based on Type__c</description>
    <type>Number</type>
    <formula>IF(ISPICKVAL(Type__c, 'Session'), 500, 250)</formula>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>