force-app/main/default/objects/Session_Booth__c/fields/slot__c.field-meta.xml
<CustomField>
    <fullName>slot__c</fullName>
    <label>slot</label>
    <type>Number</type>
    <precision>17</precision>
    <scale>0</scale>
</CustomField>